--- a/style.css
+++ b/style.css
@@ -25,11 +25,62 @@ body{
     align-items: center;
 }
 
-input{
+.input{
     border: none;
     background-color: transparent;
     outline: none;
     font-size: 24px ;
     letter-spacing: 2px;
     ;
+}
+
+.input::placeholder{
+    letter-spacing: 0px;
+}
+
+.fa-copy{
+    cursor: pointer;
+    opacity: .3;
+}
+
+.fa-copy:hover{
+    opacity: .9;
+}
+
+.btn{
+    background: black;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    margin: 10px 0px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.btn:hover{
+    background-color: cadetblue;
+}
+
+.btn:active{
+    transform: scale(0.95);
+}
+
+.alert-container{
+    position: fixed;
+    width: 300px ;
+    height: 50px;
+    background-color: forestgreen;
+    right: 20px;
+    bottom: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+
+}
+
+.active.alert-container{
+    right: -300px;
 }
